--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_login.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
             android:layout_marginBottom="30dp"
             android:paddingLeft="10dp"
             android:paddingBottom="3dp"
-
+            android:maxLength="10"
             android:textSize="14dp" />
 
 
