--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
@@ -7,13 +7,11 @@
     tools:context=".ProfesorMenuActivity">
 
 
-
     <Button
+        android:id="@+id/btnPba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="prueba">
-
-    </Button>
+        android:text="prueba"></Button>
 
 
 </ScrollView>
