--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_calificar_asq3.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_calificar_asq3.xml
@@ -134,7 +134,7 @@
 
                 <Spinner
                     android:id="@+id/sp_1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/intChoice"
