Obtener fechas ASQ3

--- a/Fundacion_DEHVI/app/src/main/res/layout/recycler_view_item.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/recycler_view_item.xml
@@ -17,4 +17,26 @@
         android:layout_marginBottom="@dimen/text_margin"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/recycler_view_item_ASQ3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sampleText"
+        android:textColor="@android:color/black"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginRight="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:textSize="24sp" />
+    <ImageView
+        android:id="@+id/imageViewEstudiante"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="Icon" />
+
 </RelativeLayout>
