--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="15dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <Toolbar
@@ -32,8 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClickEstudiantes"
-            android:padding="0dp"
-            android:text="prueba" />
+            android:padding="5dp"
+            android:gravity="center"
+            android:text="Mis estudiantes" />
 
     </LinearLayout>
 </ScrollView>
