--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_calificar_asq3.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_calificar_asq3.xml
@@ -89,52 +89,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1" />
+                    android:text="1"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/txt_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="2" />
+                    android:background="?attr/colorButtonNormal"
+                    android:text="2"
+                    android:gravity="center"/>
 
                 <TextView
                     android:id="@+id/txt_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="3" />
-
-                <TextView
-                    android:id="@+id/txt_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="4" />
-
-                <TextView
-                    android:id="@+id/txt_5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="5" />
-
-                <TextView
-                    android:id="@+id/txt_6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="6" />
+                    android:text="3"
+                    android:gravity="center"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <Spinner
                     android:id="@+id/sp_1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:entries="@array/intChoice"
@@ -145,14 +128,52 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:entries="@array/intChoice"/>
+                    android:background="?attr/colorButtonNormal"
+                    android:entries="@array/intChoice" />
 
                 <Spinner
                     android:id="@+id/sp_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:entries="@array/intChoice"/>
+                    android:entries="@array/intChoice" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txt_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="4"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txt_5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?attr/colorButtonNormal"
+                    android:text="5"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/txt_6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="6"
+                    android:gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <Spinner
                     android:id="@+id/sp_4"
@@ -166,6 +187,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="?attr/colorButtonNormal"
                     android:entries="@array/intChoice"
                     android:spinnerMode="dropdown" />
 
@@ -199,12 +221,9 @@
                 android:textAppearance="@android:style/TextAppearance.Material.Headline" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="30dp">
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/PrevBtn"
@@ -219,6 +238,21 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Siguiente" />
+
+                <TextView
+                    android:id="@+id/txtViewEstado"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="30dp">
 
                 <Button
                     android:id="@+id/registrarBtn"
@@ -239,6 +273,13 @@
                     android:gravity="center"
                     android:text="@string/cancelarLbl"
                     android:textColor="#FFFF" />
+
+                <Button
+                    android:id="@+id/btnCrearPlan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Crear Plan" />
 
             </LinearLayout>
 
