--- a/Fundacion_DEHVI/app/src/main/res/layout/recycler_view_item.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/recycler_view_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:layout_marginLeft="@dimen/text_margin"
         android:layout_marginTop="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
-        android:layout_marginBottom="@dimen/text_margin"
+        android:layout_marginBottom="5dp"
         android:textSize="24sp" />
 
     <TextView
@@ -24,19 +24,17 @@
         android:text="@string/sampleText"
         android:textColor="@android:color/black"
         android:layout_marginLeft="@dimen/text_margin"
-        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="@dimen/text_margin"
         android:layout_marginBottom="@dimen/text_margin"
-        android:textSize="24sp" />
-    <ImageView
-        android:id="@+id/imageViewEstudiante"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:contentDescription="Icon" />
+        android:textSize="18sp" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/line"></ImageView>
+
+
+
+</LinearLayout>
