--- a/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
+++ b/Fundacion_DEHVI/app/src/main/res/layout/activity_profesor_menu.xml
@@ -28,14 +28,42 @@
 
         </Toolbar>
 
-        <Button
-            android:id="@+id/btnPba"
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif"
+            android:paddingTop="20dp"
+            android:paddingBottom="30dp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:text="@string/profesorLbl"
+            android:textAppearance="@android:style/TextAppearance.Material.Headline"
+            android:textStyle="bold" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/misEstudiantesLbl"
+            android:layout_marginTop="30dp"
             android:onClick="onClickEstudiantes"
-            android:padding="5dp"
-            android:gravity="center"
-            android:text="Mis estudiantes" />
+            />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/crearPlanLbl"
+            android:layout_marginTop="30dp"
+            />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/verResultadosLbl"
+            android:layout_marginTop="30dp"
+            android:onClick="onClickElegirEstudiante"
+            />
 
     </LinearLayout>
 </ScrollView>
